[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkchimeenv"
description = "Build a CHIME Python environment"
authors = [
    {name = "The CHIME Collaboration", email = "lgray@phas.ubc.ca"}
]
maintainers = [
    { name = "Liam Gray", email = "lgray@phas.ubc.ca" },
    { name = "Don Wiebe", email = "dvw@phas.ubc.ca" }
]
license = {file = "LICENSE"}
dynamic = ["version", "readme"]
requires-python = ">=3.10"
dependencies = [
    "virtualenv",
    "virtualenv-api",
    "GitPython",
    "rich",
    "toml",
    "packaging",
    "click >= 8.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
mkchimeenv = "mkchimeenv:cli"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
target-version = "py310"
